# tldr-recall

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Makefile  README.md  Recall-Build-Spec.md  docker-compose.yml  skills-lock.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_saves_issue_read.py  0003_search_tsv.py  0004_url_resolutions.py  0005_ingest_run_counts.py
backend/recall/: config.py  db.py  main.py
backend/recall/api/: assemble.py  categories.py  collections.py  content.py  deps.py  editions.py  health.py  issues.py  library.py  saves.py  search.py
backend/recall/auth/: base.py  stub.py
backend/recall/embeddings/: base.py  cloud.py  factory.py  fake.py  reranker.py  text.py
backend/recall/ingestion/: base.py  classify.py  gmail_export.py  parser.py  pipeline.py  resolve.py
backend/recall/jobs/: __init__.py  cli.py  embed_backfill.py  gmail_dump.py  seed.py
backend/recall/models/: __init__.py  appearance.py  base.py  category.py  collection.py  content.py  edition.py  embedding.py  enums.py  ingest_run.py  issue.py  url_resolution.py  user.py  user_content_state.py  user_issue_state.py
backend/recall/repositories/: __init__.py  appearances.py  base.py  categories.py  collections.py  content.py  editions.py  embeddings.py  ingest_runs.py  issues.py  search.py  url_resolutions.py  user_content_state.py  user_issue_state.py  users.py
backend/recall/schemas/: __init__.py  category.py  common.py  edition.py  issue.py  saves.py  search.py
backend/recall/search/: __init__.py  fusion.py  intent.py  service.py
backend/tests/: conftest.py  test_classify.py  test_editions_unread.py  test_embeddings.py  test_gmail_dump.py  test_health.py  test_ingest_pipeline.py  test_issue_read_endpoints.py  test_migration_seed.py  test_parser.py  test_read_endpoints.py  test_resolve.py  test_saves_endpoints.py  test_search_endpoints.py  test_search_fusion.py  test_search_hybrid.py  test_search_intent.py
(+106 files in other folders)
