[project]
name = "recall"
version = "0.1.0"
description = "Recall — a reading, saving, and semantic-search client for the TLDR newsletters."
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pydantic-settings",
    "sqlalchemy>=2",
    "psycopg[binary]",
    "pgvector",
    "alembic",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recall"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Sensible defaults: pyflakes (F), pycodestyle (E/W), isort (I), pyupgrade (UP), bugbear (B).
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
